[package]
name = "svg-load"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
lyon = { version=">=0.17.0", features = ["serialization"] }
rctree = ">=0.4.0"
ttf-parser = ">=0.15.0"
usvg = ">=0.15.0"